---
source: inline/tests/parser/mod.rs
info: "Test 'verbatim-in-middle' from 'markup/verbatim.yml'"
---
Plain @ (1:1)->(1:10) (
    The next
    ^^^^^^^^^
)
Verbatim @ (1:10)->(1:16) (
    ␢word␢
    ^^^^^^
)
Plain @ (1:16)->(1:29) (
     is verbatim.
    ^^^^^^^^^^^^^
)

---
With input:

The next `word` is verbatim.


